--- a/config/DNSBrood.conf
+++ b/config/DNSBrood.conf
@@ -1,4 +1,4 @@
-#######################################Configure file of blackhole#####################################
+#######################################Configure file of DNSBrood#####################################
 
 #######################################important#####################################
 #External dns. You can add more reliable dns.
