--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>${spring-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring-version}</version>
 			<scope>test</scope>
@@ -87,6 +82,11 @@
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.liumapp</groupId>
+			<artifactId>DNSQueen</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 
 	</dependencies>
